add dockerfile deploy
